# learn_dns

./: Makefile  README.md  main.py  pyproject.toml
learn_dns/: __init__.py  consts.py  dns.py  models.py  utils.py
tests/: test_dns.py  test_models.py  test_utils.py
