[tool.poetry]
name = "learn-dns"
version = "0.1.0"
description = ""
authors = ["Kasra Safari <kasrasafari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipython = "^8.21.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
